Add /book/genres and /book/themes paths
