# api/swagger.yaml
@@ -40,8 +40,6 @@ paths:
           description: "Successful operation"
           schema:
             $ref: "#/definitions/Book"
-        400:
-          description: "Invalid ID supplied"
         404:
           description: "Book not found"
       x-swagger-router-controller: "Book"
@@ -82,22 +80,9 @@ paths:
       parameters:
       - name: "theme"
         in: "query"
-        description: "Theme values that need to be considered for filter"
+        description: "Theme value that need to be considered for filter"
         required: true
-        type: "array"
-        items:
-          type: "string"
-          enum:
-          - "love"
-          - "war"
-          - "nature"
-          - "space"
-          - "science"
-          - "politics"
-          - "economy"
-          - "misoltini"
-          - "society"
-        collectionFormat: "multi"
+        type: "string"
       responses:
         200:
           description: "Successful operation"
@@ -139,23 +124,53 @@ paths:
         404:
           description: "No books with that name"
       x-swagger-router-controller: "Book"
-  /book/findByAuthor:
+  /book/genres:
     get:
       tags:
       - "book"
-      summary: "Finds books by author"
-      operationId: "findBooksByAuthor"
+      summary: "Get the genres"
+      operationId: "getGenres"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "Successful operation"
+          schema:
+            type: "array"
+            items:
+              type: string
+      x-swagger-router-controller: "Book"
+  /book/themes:
+    get:
+      tags:
+      - "book"
+      summary: "Get the themes"
+      operationId: "getThemes"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "Successful operation"
+          schema:
+            type: "array"
+            items:
+              type: string
+      x-swagger-router-controller: "Book"
+  /book/similarBooks/{bookID}:
+    get:
+      tags:
+      - "book"
+      summary: "Get similar books"
+      operationId: "getSimilarBooks"
       produces:
       - "application/json"
       parameters:
-      - name: "author"
-        in: "query"
-        description: "Author values that need to be considered for filter"
+      - name: "bookID"
+        in: "path"
+        description: "ID of the book which similar books must be returned"
         required: true
-        type: "array"
-        items:
-          type: "string"
-        collectionFormat: "multi"
+        type: "integer"
+        format: "int64"
       responses:
         200:
           description: "Successful operation"
@@ -163,10 +178,8 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/BookEssential"
-        400:
-          description: "Invalid author value"
         404:
-          description: "No books with that author"
+          description: "No similar books found"
       x-swagger-router-controller: "Book"
   /user:
     get:
@@ -570,6 +583,18 @@ definitions:
       - firstName: "firstName"
         lastName: ""
         id: 0
+  BookIDandName:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
+        example: "Il sentiero"
+    example:
+      name: "Il sentiero"
+      id: 0
   Genre:
     type: "object"
     properties:
@@ -741,7 +766,7 @@ definitions:
       writtenBooks:
         type: "array"
         items:
-          $ref: "#/definitions/BookEssential"
+          $ref: "#/definitions/BookIDandName"
     example:
       firstName: "firstName"
       lastName: "lastName"
@@ -767,7 +792,7 @@ definitions:
   AuthorEssential:
     type: "object"
     properties:
-      id:
+      authorID:
         type: "integer"
         format: "int64"
       firstName:
@@ -777,34 +802,37 @@ definitions:
     example:
       firstName: "firstName"
       lastName: ""
-      id: 0
+      authorID: 0
   Event:
     type: "object"
     properties:
       name:
         type: "string"
+      location:
+        type: "string"
+      time:
+        type: "string"
+      date:
+        type: "string"
+      image_path:
+        type: "string"
       book:
-        $ref: "#/definitions/BookEssential"
-    example:
-      book:
-        name: "Il sentiero"
-        id: 0
-        authors:
-        - firstName: "firstName"
-          lastName: ""
-          id: 0
-        - firstName: "firstName"
-          lastName: ""
-          id: 0
-      name: "name"
+        $ref: "#/definitions/BookIDandName"
   EventEssential:
     type: "object"
     properties:
-      id:
+      eventID:
         type: "integer"
         format: "int64"
       name:
         type: "string"
-    example:
-      name: "name"
-      id: 0
+      location:
+        type: "string"
+      time:
+        type: "string"
+      date:
+        type: "string"
+      image_path:
+        type: "string"
+      book:
+        $ref: "#/definitions/BookIDandName"
