# controllers/Book.js
@@ -3,17 +3,6 @@
 var utils = require('../utils/writer.js');
 var Book = require('../service/BookService');
 
-module.exports.findBooksByAuthor = function findBooksByAuthor (req, res, next) {
-  var author = req.swagger.params['author'].value;
-  Book.findBooksByAuthor(author)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
 module.exports.findBooksByGenre = function findBooksByGenre (req, res, next) {
   var genre = req.swagger.params['genre'].value;
   Book.findBooksByGenre(genre)
@@ -40,10 +29,10 @@ module.exports.findBooksByTheme = function findBooksByTheme (req, res, next) {
   var theme = req.swagger.params['theme'].value;
   Book.findBooksByTheme(theme)
     .then(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, response.actualResponse, response.status);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, response.actualResponse, response.status);
     });
 };
 
@@ -51,9 +40,40 @@ module.exports.getBookById = function getBookById (req, res, next) {
   var bookID = req.swagger.params['bookID'].value;
   Book.getBookById(bookID)
     .then(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, response.actualResponse, response.status);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, response.actualResponse, response.status);
     });
+};
+
+module.exports.getGenres = function getGenres (req, res, next) {
+  Book.getGenres()
+      .then(function (response) {
+        utils.writeJson(res, response.actualResponse, response.status);
+      })
+      .catch(function (response) {
+        utils.writeJson(res, response);
+      });
+};
+
+module.exports.getThemes = function getThemes (req, res, next) {
+    Book.getThemes()
+        .then(function (response) {
+            utils.writeJson(res, response.actualResponse, response.status);
+        })
+        .catch(function (response) {
+            utils.writeJson(res, response);
+        });
+};
+
+module.exports.getSimilarBooks = function getSimilarBooks(req, res, next) {
+  var bookID = req.swagger.params['bookID'].value;
+  Book.getSimilarBooks(bookID)
+      .then(function (response) {
+        utils.writeJson(res, response.actualResponse, response.status);
+      })
+      .catch(function (response) {
+        utils.writeJson(res, response.actualResponse, response.status);
+      })
 };
